ui/src/app/run-results/run-results.component.sass
.result0
  color: #FF8800
.result1
  color: #008800
.result2
  color: #FF2200
.result3
  color: #880000
.result4
  color: #888888
.result5
  color: #444444

#results td
  padding: 2px 4px

::ng-deep body .cmd-line-btn.ui-button.ui-button-text-only .ui-button-text
  padding: 0.2em 0.5em

.step-status-red
  color: #FF0000

.step-status-green
  color: #008800


.result-regr
  color: #800
  font-weight: bold

.result-fix
  color: #080
  font-weight: bold

.result-new
  color: #5095ff
  font-weight: bold

::ng-deep .ui-paginator .ui-paginator-right-content
  display: inline-block
  float: unset
  color: #848484
  padding-left: 20px
  line-height: 2.286em
  height: 2.286em


// location column in issues table
.location
    overflow-x: hidden
    max-width: 0
    text-overflow: ellipsis
    white-space: nowrap

.location:hover
  overflow: visible

